<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.comphenix.protocol</groupId>
	<artifactId>ProtocolLib</artifactId>
	<name>ProtocolLib</name>
	<version>5.0.0-SNAPSHOT</version>

	<description>Provides read/write access to the Minecraft protocol.</description>
	<url>https://github.com/dmulloy2/ProtocolLib</url>
	<packaging>jar</packaging>
	<inceptionYear>2012</inceptionYear>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.number></project.build.number>
		<project.fullVersion>${project.version}</project.fullVersion>

		<junit.version>5.9.2</junit.version>
		<mockito.version>4.11.0</mockito.version>
		<netty.version>4.1.77.Final</netty.version>
		<spigot.version>1.19.4-R0.1-SNAPSHOT</spigot.version>
	</properties>

	<build>
		<defaultGoal>clean install</defaultGoal>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>false</shadedArtifactAttached>
							<createDependencyReducedPom>false</createDependencyReducedPom>

							<relocations>
								<relocation>
									<pattern>net.bytebuddy</pattern>
									<shadedPattern>com.comphenix.net.bytebuddy</shadedPattern>
								</relocation>
							</relocations>

							<artifactSet>
								<excludes>
									<exclude>org.spigotmc:spigot</exclude>
									<exclude>org.spigotmc:spigot-api</exclude>
									<exclude>junit:junit</exclude>
									<exclude>io.netty:*</exclude>
								</excludes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Main-Class>com.comphenix.protocol.Application</Main-Class>
							<Implementation-Title>ProtocolLib</Implementation-Title>
							<Implementation-Version>${project.fullVersion}</Implementation-Version>
							<Implementation-Vendor>dmulloy2</Implementation-Vendor>
						</manifestEntries>
					</archive>
					<finalName>${project.name}</finalName>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0</version>
				<dependencies>
					<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<useFile>false</useFile>
					<systemProperties>
						<property>
							<name>projectVersion</name>
							<value>${project.version}</value>
						</property>
					</systemProperties>
					<!-- We need this as we use reflection in tests to ensure equality -->
					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<failOnError>false</failOnError>
					<encoding>ISO-8859-1</encoding>
					<doctitle>ProtocolLib JavaDocs</doctitle>
					<windowtitle>ProtocolLib JavaDocs</windowtitle>
					<bottom>Copyright &#169; {inceptionYear}&#x2013;{currentYear}
						Comphenix and dmulloy2. Licensed under the GNU GPL v2.
					</bottom>
					<additionalOptions>
						<additionalOption>-Xdoclint:none</additionalOption>
					</additionalOptions>
				</configuration>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jenkins</id>
			<activation>
				<property>
					<name>env.BUILD_NUMBER</name>
				</property>
			</activation>
			<properties>
				<project.build.number>-b${env.BUILD_NUMBER}</project.build.number>
				<project.fullVersion>${project.version}${project.build.number}</project.fullVersion>
				<!--<project.fullVersion>${project.version}</project.fullVersion>-->
			</properties>
		</profile>

		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<properties>
				<project.fullVersion>${project.version}</project.fullVersion>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<!-- TODO: Look into signing releases
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					-->

				</plugins>
			</build>
		</profile>
	</profiles>

	<scm>
		<connection>scm:git:git://github.com/dmulloy2/ProtocolLib.git</connection>
		<developerConnection>scm:git:git@github.com:dmulloy2/ProtocolLib.git</developerConnection>
		<url>https://github.com/dmulloy2/ProtocolLib</url>
	</scm>

	<licenses>
		<license>
			<name>GNU GENERAL PUBLIC LICENSE - Version 2, June 1991</name>
			<url>https://www.gnu.org/licenses/gpl-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>dmulloy2</id>
			<name>Dan Mulloy</name>
			<url>https://dmulloy2.net/</url>
			<roles>
				<role>developer</role>
				<role>maintainer</role>
			</roles>
		</developer>
		<developer>
			<id>aadnk</id>
			<name>Kristian S. Stangeland</name>
			<email>kr_stang@hotmail.com</email>
			<url>https://comphenix.net/</url>
			<roles>
				<role>former author</role>
			</roles>
			<timezone>1</timezone>
		</developer>
	</developers>

	<distributionManagement>
		<repository>
			<id>dmulloy2-releases</id>
			<url>https://repo.dmulloy2.net/repository/releases/</url>
		</repository>
		<snapshotRepository>
			<id>dmulloy2-snapshots</id>
			<url>https://repo.dmulloy2.net/repository/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/repository/public/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- core minecraft dependencies -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>${spigot.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>${spigot.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.netty</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Compile with the old version of Netty for backwards compat -->
		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.0.23.Final</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.kyori/adventure-text-serializer-gson -->
		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-text-serializer-gson</artifactId>
			<version>4.13.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-text-serializer-plain</artifactId>
			<version>4.13.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.14.3</version>
		</dependency>

		<!-- Testing dependencies -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.netty/netty-common -->
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-common</artifactId>
			<version>${netty.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.netty/netty-transport -->
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-transport</artifactId>
			<version>${netty.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
